# codex-gp

./: .gitignore  Cargo.toml  README.md
assets/icons/: README.md
src/: lib.rs  main.rs  model.rs  reducer.rs
src/runtime/: app_server.rs  fake.rs  mod.rs
src/ui/: mod.rs  root.rs  text_input.rs
