[package]
name = "codex-gpui-desktop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A macOS-first native GPUI desktop client experiment for Codex."

[[bin]]
name = "codex-gpui-desktop"
path = "src/main.rs"

[dependencies]
gpui = { package = "gpui-ce", version = "0.3.3", default-features = false, features = ["font-kit"] }
serde_json = "1"
unicode-segmentation = "1.12"
